<resources>
    <string name="app_name">Birds of a Feather</string>

    <!--Main Activity Strings-->
    <string name="birds_of_a_feather">Birds of a Feather</string>
    <string name="main_activity_declare">Main Activity</string>
    <string name="main_activity_launchpad">Team 26 BOF App Launch Pad</string>
    <string name="start_user_information_workflow">START USER INFORMATION WORKFLOW</string>
    <string name="start_home_activity">HOME</string>

    <!--User Information Workflow-->
    <!--Bluetooth Activity Strings-->
    <string name="bluetooth_activity_declare">DO YOU GIVE PERMISSION TO ACCESS BLUETOOTH?</string>
    <string name="start_name_activity">YES</string>

    <!--Name Activity Strings-->

    <!--Picture Activity Strings-->

    <!--Course Activity Strings-->


    <!--Home Activity Workflow-->
    <!--Home Activity Strings-->
    <string name="start_search_btn_text_off">START SEARCH</string>
    <string name="start_search_btn_text_on">STOP SEARCH</string>

    <string name="go_to_profile_activity_btn">GO TO PROFILE ACTIVITY</string>

    <!--Profile Activity Strings-->

</resources>