<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/course_row_text"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:height="24sp"
        android:lineHeight="16sp"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="@tools:sample/lorem" />

    <Button
        android:id="@+id/remove_course_button"
        android:layout_width="48sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="deleteClicked"
        android:text="X"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</FrameLayout>